# headlabs-cli

./: .gitignore  Makefile.local  README.md  docker-compose.local.yml  e2e_harness.py  pyproject.toml
.github/workflows/: tests.yml
agents/finops-advisor/: Dockerfile  agent.py  config.yaml  prompt.md  requirements.txt  schema.py  tools.py
agents/threat-detector/: Dockerfile  agent.py  config.yaml  prompt.md  schema.py  tools.py
docs/: labs-loops.md  local-inspector.md  local-runtime.md  output-tracing.md  uso.md
k8s/: README.md  ollama-deployment.draft.yaml  vllm-deployment.draft.yaml
mcps/browser-devtools/: Dockerfile  README.md  config.yaml  requirements.txt  server.py
scripts/: reliability_harness.py
src/headlabs/: cli.py  (+14 more)
tests/: test_agentnames.py  test_approval.py  test_chat_stream.py  test_credentials.py  test_e2e_labs.py  test_e2e_mcps.py  test_labsctl.py  test_local_ask_user_question.py  test_local_autofix.py  test_local_backlog.py  test_local_browser_auth.py  test_local_browser_devtools.py  test_local_browser_probe.py  test_local_checklist.py  test_local_compaction.py  test_local_config.py  test_local_config_tool.py  test_local_engine.py  test_local_execute_python.py  test_local_glob_tool.py  test_local_grep_tool.py  test_local_inspect_serve_wiring.py  test_local_inspector.py  test_local_login.py  test_local_permission.py  test_local_provider.py  test_local_render.py  test_local_report_finding.py  test_local_serve.py  test_local_todo_write.py  test_local_tools.py  test_local_undo.py  test_local_web_fetch.py  test_local_web_search.py  test_otel.py  test_output.py  test_progress.py  test_research.py  test_resource_lifecycle.py  test_run_poll.py  (+6 more)
(+51 files in other folders)
