[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "headlabs"
version = "0.1.0"
description = "HeadLabs AI Platform CLI — run AI agents with your local AWS credentials"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.34",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.scripts]
headlabs = "headlabs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
