[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "headlabs"
version = "0.1.0"
description = "HeadLabs AI Platform CLI — run AI agents with your local AWS credentials"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.34",
    "requests>=2.31",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "prompt_toolkit>=3.0.43",
    "playwright>=1.61,<1.62",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
completion = ["argcomplete>=3.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "real_verify: allow the test to exercise the real _verify_mcp_behavior subprocess path",
]

[project.scripts]
headlabs = "headlabs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# axe-core bundle shipped for the local deterministic usability probe
# (headlabs.local.browser_probe), mirroring mcps/browser-devtools/axe.min.js.
"headlabs.local" = ["*.js"]
